Fix virtual list scrollbar styles in tree component

--- a/src/styles/core.less
+++ b/src/styles/core.less
@@ -12,6 +12,8 @@
 }
 
 .ant-tree {
+  --rc-virtual-list-scrollbar-bg: rgba(5, 5, 5, 0.2);
+
   &-treenode:not(&-treenode-disabled).filter-node &-title {
     color: inherit !important;
     font-weight: 500 !important;
